# remycord

./: .gitignore  Cargo.toml
.github/: README.md
.github/workflows/: rust.yml
docs/: _config.yml  configuration.md  index.md  installation.md  themes.md
docs/_docs/: configuration.md  installation.md  themes.md  token-setup.md
docs/_layouts/: default.html  doc.html
docs/assets/css/: main.css  style.css
src/: main.rs  mock_data.rs
src/app/: mod.rs  mode.rs  sidebar.rs  state.rs
src/config/: keybinds.rs  mod.rs  theme.rs
src/discord/: api.rs  auth.rs  client.rs  gateway.rs  mod.rs  models.rs  token.rs
src/input/: file_picker.rs  handlers.rs  mod.rs
src/models/: channel.rs  dm.rs  file.rs  guild.rs  message.rs  mod.rs  notification.rs
src/ui/: help.rs  image.rs  messages.rs  mod.rs  notifications.rs  settings.rs  sidebar.rs
