[package]
name = "remycord"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.29.0"
chrono = "0.4.42"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
dirs = "6.0.0"
unicode-width = "0.2"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
serenity = { git = "https://github.com/gideonmt/serenity", version = "0.12" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Credentials"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "3.0"
